@@ -1,3 +1,7 @@
+2013-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am, /ac/withenable.ac, configure.ac: Use libs/paper.
+
 2013-10-12  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* dvi.c, dvicodes.h: Rename XDVI_ID to XDV_ID.
